# cli

./: .gitignore  README.md  pyproject.toml  ttyf
ttyf_cli/: __init__.py  cli.py  constants.py  formatter.py  plaid_utils.py  schemas.py  ttyf.py
ttyf_cli/auth/plaid/: callback_server.py
ttyf_cli/keyring/: exceptions.py  handler.py
ttyf_cli/templates/: __init__.py
